--- a/camCipher/build.gradle
+++ b/camCipher/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile 'com.github.japgolly.android:svg-android:2.0.6'
     compile 'info.guardianproject.cacheword:cachewordlib:0.1.1'
     compile 'info.guardianproject.iocipher:IOCipherStandalone:0.3'
+    compile 'net.zetetic:android-database-sqlcipher:3.5.4@aar'
     compile files('libs/jcodec.jar')
     compile 'com.madgag.spongycastle:core:1.50.0.0'
     compile 'com.madgag.spongycastle:pg:1.50.0.0'
